versions/v3.7.0/boards/st/b_l4s5i_iot01a/doc/index.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/boards/st/b_l4s5i_iot01a/doc/index.html
original_path: boards/st/b_l4s5i_iot01a/doc/index.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down list at the bottom of the left panel and select the desired version.

# ST B\_L4S5I\_IOT01A Discovery kit

## Overview

The B\_L4S5I\_IOT01A Discovery kit features an ARM Cortex-M4 based STM32L4S5VI MCU
with a wide range of connectivity support and configurations. Here are
some highlights of the B\_L4S5I\_IOT01A Discovery kit:

- STM32L4S5VIT6 microcontroller featuring 2 Mbyte of Flash memory, 640 Kbytes of RAM in LQFP100 package
- On-board ST-LINK/V2-1 supporting USB re-enumeration capability
- Three different interfaces supported on USB:

  > - Virtual com port
  > - Mass storage
  > - Debug port
- ARDUINO ® Uno V3 and Pmod TM expansion connector
- 4 LEDs (2 for user, wifi, BLE)
- 2 push-buttons (user and reset)
- USB OTG FS with micro-AB connector
- Dynamic NFC tag
- 2 digital omnidirectional microphones
- Capacitive digital sensor for relative humidity and temperature
- Time-of-flight and gesture-detection sensors
- High-performance 3-axis magnetometer
- 3D accelerometer and 3D gyroscope
- 64-Mbit Quad-SPI Flash memory
- Bluetooth ® 4.1 module
- 802.11 b/g/n compliant Wi‐Fi ® module
- MCU current ammeter with 4 ranges and auto-calibration
- Flexible power supply options:
  :   - ST-LINK/V2-1
      - USB FS connector
      - External 5 V

![B_L4S5I_IOT01A Discovery kit](https://docs.zephyrproject.org/3.7.0/_images/b-l4s5i_iot01a.jpg)

More information about the board can be found at the [B L4S5I IOT01A Discovery kit website](https://www.st.com/en/evaluation-tools/b-l4s5i-iot01a.html).

## Hardware

The STM32L4S5VI SoC provides the following hardware features:

- Ultra-low-power with FlexPowerControl (down to 130 nA Standby mode and 100 uA/MHz run mode)
- Core: ARM® 32-bit Cortex®-M4 CPU with FPU, frequency up to 120 MHz, 100DMIPS/1.25DMIPS/MHz (Dhrystone 2.1)
- Clock Sources:
  :   - 4 to 48 MHz crystal oscillator
      - 32 kHz crystal oscillator for RTC (LSE)
      - Internal 16 MHz factory-trimmed RC ( ±1%)
      - Internal low-power 32 kHz RC ( ±5%)
      - Internal multispeed 100 kHz to 48 MHz oscillator, auto-trimmed by
        LSE (better than ±0.25 % accuracy)
      - 3 PLLs for system clock, USB, audio, ADC
- RTC with HW calendar, alarms and calibration
- Up to 21 capacitive sensing channels: support touchkey, linear and rotary touch sensors
- 16x timers:
  :   - 2x 16-bit advanced control
      - 2x 32-bit and 5x 16-bit general purpose
      - 2x 16-bit basic
      - 2x low-power 16-bit timers (available in Stop mode)
      - 2x watchdogs
      - SysTick timer
- Up to 83 fast I/Os, most 5 V-tolerant
- Memories
  :   - Up to 2 MB Flash, 2 banks read-while-write, proprietary code readout protection
      - Up to 640 KB of SRAM including 32 KB with hardware parity check
      - External memory interface for static memories supporting SRAM, PSRAM, NOR and NAND memories
      - Octo SPI memory interface
- 4x digital filters for sigma delta modulator
- Rich analog peripherals (independent supply)
  :   - 1x 12-bit ADC 5 MSPS, up to 16-bit with hardware oversampling, 200 uA/MSPS
      - 2x 12-bit DAC, low-power sample and hold
      - 2x operational amplifiers with built-in PGA
      - 2x ultra-low-power comparators
- 18x communication interfaces
  :   - USB OTG 2.0 full-speed, LPM and BCD
      - 2x SAIs (serial audio interface)
      - 4x I2C FM+(1 Mbit/s), SMBus/PMBus
      - 6x USARTs (ISO 7816, LIN, IrDA, modem)
      - 3x SPIs (4x SPIs with the Quad SPI)
      - CAN (2.0B Active) and SDMMC interface
      - SDMMC I/F
      - DCMI camera interface
- 14-channel DMA controller with multiplex request router
- True random number generator
- CRC calculation unit, 96-bit unique ID
- AES and HASH hardware accelerators
- Development support: serial wire debug (SWD), JTAG, Embedded Trace Macrocell™

More information about STM32L4S5VI can be found here:
:   - [STM32L4S5VI on www.st.com](https://www.st.com/en/microcontrollers-microprocessors/stm32l4s5vi.html)
    - [STM32L4S5 reference manual](https://www.st.com/resource/en/reference_manual/dm00310109.pdf)

### Supported Features

The Zephyr b\_l4s5i\_iot01a board configuration supports the following hardware features:

| Interface | Controller | Driver/Component |
| --- | --- | --- |
| NVIC | on-chip | nested vector interrupt controller |
| UART | on-chip | serial port-polling; serial port-interrupt |
| PINMUX | on-chip | pinmux |
| GPIO | on-chip | gpio |
| I2C | on-chip | i2c |
| SPI | on-chip | spi |
| PWM | on-chip | pwm |
| WATCHDOG | on-chip | independent watchdog |
| BLE | module | bluetooth |
| WIFI | module | es-wifi |

The default configuration can be found in the defconfig file:

> [boards/st/b\_l4s5i\_iot01a/b\_l4s5i\_iot01a\_defconfig](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/st/b_l4s5i_iot01a/b_l4s5i_iot01a_defconfig)

### Connections and IOs

B\_L4S5I\_IOT01A Discovery kit has 9 GPIO controllers (from A to I). These controllers are responsible for pin muxing,
input/output, pull-up, etc.

For more details please refer to [B L47S5I IOT01A board User Manual](https://www.st.com/resource/en/user_manual/dm00698410.pdf).

#### Default Zephyr Peripheral Mapping:

- UART\_1 TX/RX : PB6/PB7 (ST-Link Virtual Port Com)
- UART\_4 TX/RX : PA0/PA1 (Arduino Serial)
- I2C1 SCL/SDA : PB8/PB9 (Arduino I2C)
- I2C2 SCL/SDA : PB10/PB11 (Sensor I2C bus)
- SPI1 NSS/SCK/MISO/MOSI : PA2/PA5/PA6/PA7 (Arduino SPI)
- SPI3 SCK/MISO/MOSI : PC10/PC11/PC12 (BT SPI bus)
- PWM\_2\_CH1 : PA15
- LD1 : PA5
- LD2 : PB14
- user button : PC13

#### System Clock

B\_L4S5I\_IOT01A Discovery System Clock could be driven by an internal or external oscillator,
as well as the main PLL clock. By default the System clock is driven by the PLL clock at 80MHz,
driven by 16MHz high speed internal oscillator.

#### Serial Port

B\_L4S5I\_IOT01A Discovery kit has 4 U(S)ARTs. The Zephyr console output is assigned to UART1.
Default settings are 115200 8N1.

## Programming and Debugging

### Flashing

B\_L4S5I\_IOT01A Discovery kit includes an ST-LINK/V2-1 embedded debug tool interface.
This interface is supported by the openocd version included in Zephyr SDK.

#### Flashing an application to B\_L4S5I\_IOT01A Discovery kit

Connect the B\_L4S5I\_IOT01A Discovery kit to your host computer using the USB
port, then run a serial host program to connect with your Discovery
board. For example:

```shell
$ minicom -D /dev/ttyACM0
```

Then, build and flash in the usual way. Here is an example for the
[Hello World](../../../../samples/hello_world/README.md#hello-world) application.

```shell
# From the root of the zephyr repository
west build -b b_l4s5i_iot01a samples/hello_world
west flash
```

You should see the following message on the console:

```shell
Hello World! arm
```

### Debugging

You can debug an application in the usual way. Here is an example for the
[Hello World](../../../../samples/hello_world/README.md#hello-world) application.

```shell
# From the root of the zephyr repository
west build -b b_l4s5i_iot01a samples/hello_world
west debug
```
